site modifié macbook

--- a/9_Titrages/index.html
+++ b/9_Titrages/index.html
@@ -564,8 +564,8 @@ calculs rigoureux sont attendus.</li>
 <p><img alt="Propositions" src="../img/9_image1.png" width="350" /></p>
 <details class="warning">
 <summary>Correction</summary>
-<p>1.
-<span class="arithmatex">\(<span class="arithmatex">\(Ag^+ + C\ell^- \longrightarrow AgC\ell\)</span>\)</span></p>
+<p>1.</p>
+<div class="arithmatex">\[Ag^+ + C\ell^- \longrightarrow AgC\ell\]</div>
 <ol>
 <li><strong>Avant l'équivalence</strong> A chaque fois qu'un ion chlorure réagit avec un ion <span class="arithmatex">\(Ag^+\)</span>, un ion spectateur <span class="arithmatex">\(NO_3^-\)</span> tombe dans le bécher. C'est comme si un ion <span class="arithmatex">\(NO_3^-\)</span> remplaçait un ion chlorure. Comme les ions chlorure ont une meilleure conductivité molaire ionique (<span class="arithmatex">\(\lambda(Cl-) &gt;\lambda(NO3-)\)</span>), la conductivité <span class="arithmatex">\(\sigma\)</span> du milieu diminue. On obtient ici une droite de pente négative.</li>
 </ol>
