--- a/force_acide_base/index.html
+++ b/force_acide_base/index.html
@@ -517,7 +517,6 @@
                 
 
 <h1 id="force-des-acides-et-des-bases">Force des acides et des bases</h1>
-<p><img alt="Image title" src="../img/zelda.png" width="150" /></p>
 <div class="admonition failure">
 <p class="admonition-title">Définitions</p>
 <ul>
@@ -610,8 +609,15 @@
 <li>Modifier Ka à Ca fixée et observer son influence sur le taux d'avancement </li>
 <li>Recommencer en fixant Ka et en modifiant Ca.</li>
 </ul>
-<iframe src="https://trinket.io/embed/python/80ffa93296" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-<iframe src="https://trinket.io/embed/python3/80af56369b?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<iframe src="https://trinket.io/embed/python3/2dc35a9710?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+
+<ul>
+<li>Tracé du diagramme de distribution d'un couple de pKa donné. <ul>
+<li>Modifier pKa et prédire / observer l'influence sur le diagramme</li>
+</ul>
+</li>
+</ul>
+<iframe src="https://trinket.io/embed/python3/6c9d231c8e?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
               
             </article>
