site modifié macbook

--- a/force_acide_base/index.html
+++ b/force_acide_base/index.html
@@ -518,6 +518,7 @@
 
 <h1 id="force-des-acides-et-des-bases">Force des acides et des bases</h1>
 <p><img alt="Propositions" src="../img/force_acide_base_ex2_2.png" /></p>
+<p><img alt="Propositions" src="../img/9_image1.png" width="350" /></p>
 <div class="admonition failure">
 <p class="admonition-title">Définitions</p>
 <ul>
