site modifié macbook

--- a/force_acide_base/index.html
+++ b/force_acide_base/index.html
@@ -605,6 +605,11 @@
 <h3 id="exercice-2-amerique-du-nord-2021-exercice-a-lacide-lactique">Exercice 2: Amérique du nord 2021: Exercice A: L'acide lactique</h3>
 <p><img alt="Propositions" src="../img/force_acide_base_ex2_1.jpg" /></p>
 <p><img alt="Propositions" src="../img/force_acide_base_ex2_2.png" /></p>
+<details class="warning">
+<summary>Correction</summary>
+<p><img alt="Propositions" src="../img/2021-AmNord-Sujet1-ExoA-AcideLactique-Ka-5pts-Correction-1.png" /></p>
+<p><img alt="Propositions" src="../img/2021-AmNord-Sujet1-ExoA-AcideLactique-Ka-5pts-Correction-2.png" /></p>
+</details>
 <h2 id="python">Python</h2>
 <ul>
 <li>Le programme suivant calcule l'avancement final de la réaction entre un acide faible  et l'eau. La concentration de l'acide est Ca et la constante d'acidité du couple auquel il appartient est Ka.</li>
@@ -619,7 +624,7 @@
 </ul>
 </li>
 </ul>
-<iframe src="https://trinket.io/embed/python3/6c9d231c8e?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<iframe src="https://trinket.io/embed/python3/3464c5b29f?start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
               
             </article>
