--- a/14_Lunette_astronomique/index.html
+++ b/14_Lunette_astronomique/index.html
@@ -491,7 +491,7 @@
 </div>
 <h3 id="exercice-pour-sentrainer-1-p-394-permet-de-revoir-toutes-les-constructions-et-raisonnements">Exercice pour s'entraîner: 1 p 394 (permet de revoir toutes les constructions et raisonnements)</h3>
 <h3 id="exercice-type-bac">Exercice TYPE BAC</h3>
-<p><a href="https://labolycee.org/nuisances-sonores-dun-aeroport">Sujet de Bac Polynésie 2021</a></p>
+<p><a href="https://labolycee.org/la-grande-lunette-de-meudon#sujet">Sujet de Bac Polynésie 2021</a></p>
 <p><a href="https://labolycee.org/libraries/pdf.js/web/viewer.html?file=https%3A%2F%2Flabolycee.org%2Fsites%2Fdefault%2Ffiles%2F2022-03%2F2021-Polynesie-Sujet-ExoC-Correction-LunetteMeudon-5pts.pdf#zoom=page-width">Correction+ Explications</a></p>
 
               
