--- a/Acidebase/index.html
+++ b/Acidebase/index.html
@@ -458,6 +458,59 @@
 <summary>Correction</summary>
 <p><img alt="Propositions" src="../img/Acidebase_image1.jpg" width="450" /></p>
 </details>
+<h1 id="quizz">QUIZZ</h1>
+<h2 id="q1">Q1</h2>
+<p>Une base est une espèce chimique</p>
+<ol>
+<li>dont le pH est &gt;7</li>
+<li>capable de recevoir un e-</li>
+<li>capable de céder un ion H+</li>
+<li>capable de recevoir un ion H+</li>
+<li>capable de céder un e-</li>
+</ol>
+<h2 id="q2">Q2</h2>
+<p>Dans une solution d'acide chlorhydrique <span class="arithmatex">\(H_3O^+ + C\ell^-\)</span></p>
+<ol>
+<li><span class="arithmatex">\(C\ell^-\)</span> est une base</li>
+<li><span class="arithmatex">\(H_3O^+\)</span> est un acide</li>
+<li><span class="arithmatex">\(H_3O^+\)</span> est une base</li>
+<li><span class="arithmatex">\(H_3O^+ + C\ell^-\)</span> est un couple acide/base</li>
+</ol>
+<h2 id="q3">Q3</h2>
+<p>La base conjuguée de l'acide éthanoïque est:</p>
+<ol>
+<li><span class="arithmatex">\(CH_3COO^-\)</span></li>
+<li><span class="arithmatex">\(HCOO^-\)</span></li>
+<li><span class="arithmatex">\(CH_3COOH\)</span></li>
+<li><span class="arithmatex">\(HCOOH\)</span></li>
+</ol>
+<h2 id="q4">Q4</h2>
+<p>Quelles sont les formules correctes ?</p>
+<ol>
+<li><span class="arithmatex">\(pH=-\log [H_3o^+]\)</span></li>
+<li><span class="arithmatex">\([H_3O^+] = 10 ^{pH}\)</span></li>
+<li><span class="arithmatex">\(pH=\log [H_3o^+]\)</span></li>
+<li><span class="arithmatex">\([H_3O^+] = 10 ^{-pH}\)</span></li>
+</ol>
+<h2 id="q5">Q5</h2>
+<p>Soit la réaction acidebase d'équation <span class="arithmatex">\(<span class="arithmatex">\(NH_4^+ +HS^- \leftrightarrow NH_3 + H_2S\)</span>\)</span> 
+Les couples mis en jeu sont:</p>
+<ol>
+<li><span class="arithmatex">\(NH_4^+ / HS^-\)</span> et <span class="arithmatex">\(H_2S / NH_3\)</span></li>
+<li><span class="arithmatex">\(NH_3 / NH_4^+\)</span> et <span class="arithmatex">\(HS^- /H_2S\)</span></li>
+<li><span class="arithmatex">\(NH_4^+ / NH_3\)</span> et <span class="arithmatex">\(H_2S / HS^-\)</span></li>
+<li><span class="arithmatex">\(NH_4^+ /HS^-\)</span> et <span class="arithmatex">\(H_3O^+/H_2O\)</span></li>
+</ol>
+<details class="warning">
+<summary>Correction</summary>
+<ul>
+<li>Q1: 4</li>
+<li>Q2: 2</li>
+<li>Q3: 1</li>
+<li>Q4: 1 et 4</li>
+<li>Q5: 3</li>
+</ul>
+</details>
 
               
             </article>
