site modifi 18fev

--- a/index.html
+++ b/index.html
@@ -446,8 +446,12 @@
                 
 
 <h1 id="la-specialite-physique-chimie-a-dumezil">La Spécialité Physique Chimie à Dumézil</h1>
-<p>Site en construction ...</p>
-<p><strong>Utiliser le menu</strong> pour accéder au contenu déjà en ligne</p>
+<p><strong>Mise à jour le 12 avril</strong></p>
+<p>Nouveautés:</p>
+<ul>
+<li>Chap 4,5 et 6: de la Mécanique :stuck_out_tongue_winking_eye:</li>
+</ul>
+<p><strong>Utiliser le menu</strong> puis rubriques Synthèses</p>
 
               
             </article>
