site modifi 18fev

--- a/5_Dynamique/index.html
+++ b/5_Dynamique/index.html
@@ -637,9 +637,9 @@
 </ul>
 <div class="arithmatex">\[m\times \vec{a} = \vec{F_1} +\vec{F_2} + ... \]</div>
 <ul>
-<li>Troisième Loi: Soit deux systèmes A et B, <span class="arithmatex">\(\overrightarrow{F_{A/B}\)</span> la force de A subit par B et <span class="arithmatex">\(\overrightarrow{F_{B/A}\)</span> la force de B subit par A. Alors on a:</li>
+<li>Troisième Loi: Soit deux systèmes A et B, <span class="arithmatex">\(\overrightarrow{F_{A/B}}\)</span> la force de A subit par B et <span class="arithmatex">\(\overrightarrow{F_{B/A}}\)</span> la force de B subit par A. Alors on a:</li>
 </ul>
-<div class="arithmatex">\[\overrightarrow{F_{A/B} = \overrightarrow{F_{B/A}\]</div>
+<div class="arithmatex">\[\overrightarrow{F_{A/B}} = \overrightarrow{F_{B/A}}\]</div>
 <ul>
 <li>
 <p>Relier certains mouvements à des propriétés des vecteurs:</p>
