--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 <p><strong>Mise à jour le 12 avril</strong></p>
 <p>Nouveautés:</p>
 <ul>
-<li>Chap 4,5 et 6: de la Mécanique :stuck_out_tongue_winking_eye:</li>
+<li>Chap 4,5 et 6: de la Mécanique <img alt="😜" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f61c.png" title=":stuck_out_tongue_winking_eye:" /></li>
 </ul>
 <p><strong>Utiliser le menu</strong> puis rubriques Synthèses</p>
 
