site modifi 18fev

--- a/7_Cinetique/index.html
+++ b/7_Cinetique/index.html
@@ -563,14 +563,20 @@
 <p><a href="https://youtu.be/NO87Hcyt7OU">Speed Révision</a></p>
 <h1 id="exos-type-bac">Exos type BAC:</h1>
 <ul>
-<li>Centres étrangers 2021 sujet 2</li>
-</ul>
-<p><a href="https://labolycee.org/evolution-du-sucre-dans-une-boisson-gazeuse">Sujet</a>
-<a href="http://chimix.com/an22/bac/et211.html">Corrigé</a></p>
+<li>
+<p>Centres étrangers 2021 sujet 2</p>
 <ul>
-<li>Sujet zéro 2020: Exercice 1 de 4.1 à 4.5</li>
+<li><a href="https://labolycee.org/evolution-du-sucre-dans-une-boisson-gazeuse">Sujet</a></li>
+<li><a href="http://chimix.com/an22/bac/et211.html">Corrigé</a></li>
 </ul>
-<p><a href="https://labolycee.org/depolluer-une-eau-avec-des-carapaces-de-crevettes">Sujet-Corrigé</a></p>
+</li>
+<li>
+<p>Sujet zéro 2020: Exercice 1 de 4.1 à 4.5</p>
+<ul>
+<li><a href="https://labolycee.org/depolluer-une-eau-avec-des-carapaces-de-crevettes">Sujet-Corrigé</a></li>
+</ul>
+</li>
+</ul>
 <h1 id="quizz">QUIZZ</h1>
 <h3 id="q1">Q1</h3>
 <p>Les facteurs cinétiques sont:</p>
