--- a/index.html
+++ b/index.html
@@ -446,8 +446,11 @@
                 
 
 <h1 id="la-specialite-physique-chimie-a-dumezil">La Spécialité Physique Chimie à Dumézil</h1>
-<p><strong>Mise à jour le 12 avril</strong></p>
-<p>Nouveautés:</p>
+<p><strong>Mise à jour du 13 avril</strong></p>
+<ul>
+<li>Chap 7: Cinétique <img alt="👩‍🔬" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f469-200d-1f52c.png" title=":woman_scientist:" /></li>
+</ul>
+<p><strong>Mise à jour du 12 avril</strong></p>
 <ul>
 <li>Chap 4,5 et 6: de la Mécanique <img alt="😜" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f61c.png" title=":stuck_out_tongue_winking_eye:" /></li>
 </ul>
