site modifi 18fev

--- a/7_Cinetique/index.html
+++ b/7_Cinetique/index.html
@@ -605,7 +605,8 @@
 <li><span class="arithmatex">\(x(t_{1/2})= x_{max} / 2\)</span></li>
 </ol>
 <h3 id="q4">Q4</h3>
-<p>Soit la réaction: <span class="arithmatex">\(<span class="arithmatex">\(2C +O_2\longrightarrow 2CO\)</span>\)</span></p>
+<p>Soit la réaction: </p>
+<div class="arithmatex">\[2C +O_2\longrightarrow 2CO\]</div>
 <p>La vitesse volumique de disparition de <span class="arithmatex">\(C\)</span> est</p>
 <ol>
 <li><span class="arithmatex">\(v_{disp}(C)= -\frac{d[C]}{dt}\)</span></li>
@@ -614,7 +615,9 @@
 <li><span class="arithmatex">\(v_{disp}(C)= \frac{1}{2}\frac{d[C]}{dt}\)</span></li>
 </ol>
 <h3 id="q5">Q5</h3>
-<p>Si la réaction <span class="arithmatex">\(<span class="arithmatex">\(A+B\longrightarrow C\)</span>\)</span> suit une loi de vitesse d'ordre 1 on a:</p>
+<p>Si la réaction </p>
+<div class="arithmatex">\[A+B\longrightarrow C\]</div>
+<p>suit une loi de vitesse d'ordre 1 on a:</p>
 <ol>
 <li><span class="arithmatex">\(k.[A]_t = - \frac{d[A]}{dt}\)</span></li>
 <li>la vitesse volumique de disparition est proportionnelle à la concentration en A</li>
