site modifi 18fev

--- a/5_Dynamique/index.html
+++ b/5_Dynamique/index.html
@@ -663,7 +663,7 @@
 <p>Soit un système de masse 100 g subissant deux forces horizontales <span class="arithmatex">\(F_1= 20\: N\)</span>  et <span class="arithmatex">\(F_2= 10\: N\)</span>. <span class="arithmatex">\(\vec{F_1}\)</span> est horizontale vers la gauche et <span class="arithmatex">\(\vec{F_2}\)</span> est horizontale vers la droite.</p>
 <ol>
 <li><span class="arithmatex">\(\vec{a}\)</span> est horizontale vers la gauche</li>
-<li><span class="arithmatex">\(\vec{a}\)</span> est horizontale vers la gauche</li>
+<li><span class="arithmatex">\(\vec{a}\)</span> est horizontale vers la droite</li>
 <li><span class="arithmatex">\(a\)</span> est augmente au cours du temps </li>
 <li><span class="arithmatex">\(a\)</span> est constant au cours du temps</li>
 <li><span class="arithmatex">\(a\)</span> est diminue au cours du temps</li>
