--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
 <p><strong>Mise à jour du 13 avril</strong></p>
 <ul>
 <li>Chap 7: Cinétique <img alt="👩‍🔬" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f469-200d-1f52c.png" title=":woman_scientist:" /></li>
+<li>Chap 2: Méthodes Physiques <img alt="🪛" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1fa9b.png" title=":screwdriver:" /></li>
 </ul>
 <p><strong>Mise à jour du 12 avril</strong></p>
 <ul>
