site modifi 18fev

--- a/2_Methodes_Physiques/index.html
+++ b/2_Methodes_Physiques/index.html
@@ -492,7 +492,6 @@
 <h1 id="analyser-un-systeme-chimique-par-des-methodes-physiques">Analyser un système chimique par des méthodes physiques</h1>
 <div class="admonition failure">
 <p class="admonition-title">Définitions et Formules</p>
-</div>
 <ul>
 <li>Dilution, facteur de dilution. Savoir quel volume de solution mère il faut prélever pour préparer une solution fille de volume connu de concentration connue. </li>
 <li>Déterminer, à partir de la valeur de la concentration en ion oxonium <span class="arithmatex">\(H_3^O+\)</span>, la valeur du pH de la solution et inversement.</li>
@@ -500,6 +499,7 @@
 <li>Citer les domaines de validité de ces lois. </li>
 <li>Exploiter, à partir de données tabulées, un spectre d'absorption infrarouge ou UV-visible pour identifier un groupe caractéristique ou une espèce chimique.</li>
 </ul>
+</div>
 <h2 id="techniques-cles">Techniques clés</h2>
 <ul>
 <li>Savoir réaliser un <strong>Dosage par étalonnage</strong> (à ne pas confondre avec titrage !)</li>
@@ -525,8 +525,9 @@
 </ul>
 <h2 id="exercice-sur-spectro-ir">Exercice sur Spectro IR</h2>
 <p>Nomenclature, Facteurs pour améliorer le rendement d'une synthèse, Calcul d'un rendement et analyse d'un spectre IR. <strong>à faire avec la révision du chapitre Chimie Organique</strong></p>
-<pre><code>- [Sujet-Corrigé](https://labolycee.org/synthese-dun-arome-alimentaire)
-</code></pre>
+<ul>
+<li><a href="https://labolycee.org/synthese-dun-arome-alimentaire">Sujet-Corrigé</a></li>
+</ul>
 <h1 id="quizz">QUIZZ</h1>
 <h3 id="q1">Q1</h3>
 <p>Les bandes d'absorption dans l'infrarouge d'une molécule permettent </p>
