site modifi 18fev

--- a/a_savoir_gd_oral/index.html
+++ b/a_savoir_gd_oral/index.html
@@ -553,20 +553,16 @@
 </div>
 <h2 id="sur-quoi-sentrainer">Sur quoi s'entraîner ?</h2>
 <p>Il faut se préparer en centrant son entraînement sur les attendus du jury, à savoir :</p>
-<pre><code>1. La qualité de sa prestation orale, c’est-à-dire sa capacité à capter l’attention, soutenir un discours, etc...
-2. La qualité de sa prise de parole en continu, c’est-à-dire sa gestion du temps, la ponctuation du discours, etc... 
-3. La qualité de ses connaissances.
-4. La qualité de son interaction avec les membres du jury, c’est-à-dire sa capacité à réagir à une interrogation, à la reformuler, à prendre l’initiative dans l’échange, etc...
-4. La qualité et la construction de son argumentation et de  sa démonstration.
-</code></pre>
+<ol>
+<li>La qualité de sa prestation orale, c’est-à-dire sa capacité à capter l’attention, soutenir un discours, etc...</li>
+<li>La qualité de sa prise de parole en continu, c’est-à-dire sa gestion du temps, la ponctuation du discours, etc... </li>
+<li>La qualité de ses connaissances.</li>
+<li>La qualité de son interaction avec les membres du jury, c’est-à-dire sa capacité à réagir à une interrogation, à la reformuler, à prendre l’initiative dans l’échange, etc...</li>
+<li>La qualité et la construction de son argumentation et de  sa démonstration. </li>
+</ol>
 <h2 id="videos-et-tutos">Vidéos et Tutos</h2>
 <ul>
-<li>
-<p>Sur la communication </p>
-<ul>
 <li><a href="https://www.lumni.fr/programme/les-petits-tutos-du-grand-oral">Tutos</a></li>
-</ul>
-</li>
 </ul>
 
               
