site modifi 18fev

--- a/16_transferts_thermiques.md/index.html
+++ b/16_transferts_thermiques.md/index.html
@@ -630,7 +630,8 @@
 <li><span class="arithmatex">\(V=n\times Vm\)</span></li>
 </ol>
 <h3 id="q2">Q2</h3>
-<p>Le transfert thermique reçu par un système de masse <span class="arithmatex">\(m\)</span> dont la température passe de <span class="arithmatex">\(T_1\)</span> à <span class="arithmatex">\(T_2\)</span> vaut <span class="arithmatex">\(<span class="arithmatex">\(Q=m.c.\Delta T\)</span>\)</span></p>
+<p>Le transfert thermique reçu par un système de masse <span class="arithmatex">\(m\)</span> dont la température passe de <span class="arithmatex">\(T_1\)</span> à <span class="arithmatex">\(T_2\)</span> vaut </p>
+<div class="arithmatex">\[Q=m.c.\Delta T\]</div>
 <ol>
 <li>c est la capacité thermique en J/K</li>
 <li>c est la capacité thermique en <span class="arithmatex">\(J.K^{-1}.kg^{-1}\)</span></li>
