--- a/index.html
+++ b/index.html
@@ -465,9 +465,16 @@
                 
 
 <h1 id="la-specialite-physique-chimie-a-dumezil">La Spécialité Physique Chimie à Dumézil</h1>
-<p><strong>Mise à jour du 13 avril</strong></p>
+<p><strong> Mise à jour du 15 avril</strong></p>
 <ul>
-<li>Rubrique Grand-Oral <img alt="🗣" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f5e3.png" title=":speaking_head:" /></li>
+<li>Chap 9: Lois de Képler</li>
+<li>
+<p>Chap 16: Transferts thermiques
+<strong>Mise à jour du 13 avril</strong></p>
+</li>
+<li>
+<p>Rubrique Grand-Oral <img alt="🗣" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f5e3.png" title=":speaking_head:" /></p>
+</li>
 <li>Chap 7: Cinétique <img alt="👩‍🔬" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f469-200d-1f52c.png" title=":woman_scientist:" /></li>
 <li>Chap 2: Méthodes Physiques <img alt="🪛" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1fa9b.png" title=":screwdriver:" /></li>
 </ul>
