site modifi 18fev

--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@
 <h1 id="la-specialite-physique-chimie-a-dumezil">La Spécialité Physique Chimie à Dumézil</h1>
 <p><strong> Mise à jour du 15 avril</strong></p>
 <ul>
-<li>Chap 9: Lois de Képler</li>
+<li>Chap 9: Lois de Képler <img alt="👩🏻‍🚀" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f469-1f3fb-200d-1f680.png" title=":woman_astronaut_tone1:" /></li>
 <li>
-<p>Chap 16: Transferts thermiques
+<p>Chap 16: Transferts thermiques <img alt="🌡" class="twemoji" src="https://twemoji.maxcdn.com/v/latest/72x72/1f321.png" title=":thermometer:" />
 <strong>Mise à jour du 13 avril</strong></p>
 </li>
 <li>
