site modifi 18fev

--- a/5_Dynamique/index.html
+++ b/5_Dynamique/index.html
@@ -678,8 +678,7 @@
 <h3 id="exercice-type-bac">Exercice TYPE BAC</h3>
 <p>Cet exercice reprend un petit peu de cinématique, chute libre et une touche de Python. C'est aussi un exercice sur mouvement d'une particule dans le champ de pesanteur.</p>
 <ul>
-<li>Sujet: <a href="https://labolycee.org/water-bottle-flip">LIEN</a></li>
-<li>Correction: sur demande</li>
+<li><a href="https://labolycee.org/water-bottle-flip">Sujet - Corrigé</a></li>
 </ul>
 <h2 id="quizz">QUIZZ</h2>
 <p>Questions</p>
