--- a/4_Cinematique/index 3.html
+++ b/4_Cinematique/index 3.html
@@ -681,7 +681,7 @@ Sa valeur est </li>
 <h2 id="exercice-dapres-bac-metropole-2019">Exercice d'après BAC Métropole 2019</h2>
 <p>Le question 1.1 n'est pas à chercher.</p>
 <p>A la dernière question, utiliser la seconde loi de Newton.</p>
-<p><img alt="Propositions" src="img/2019-Metro-Exo2-Sujet-Fusee-6pts-1.png" />
+<p><img alt="Propositions" src="../img/2019-Metro-Exo2-Sujet-Fusee-6pts-1.png" />
 <img alt="Propositions" src="../img/2019-Metro-Exo2-Sujet-Fusee-6pts-2.png" />
 <img alt="Propositions" src="../img/2019-Metro-Exo2-Sujet-Fusee-6pts-3.png" /></p>
 <details class="warning">
