--- a/pyxel_1/index.html
+++ b/pyxel_1/index.html
@@ -721,7 +721,7 @@
 <h1 id="programme-elementaire">Programme élémentaire</h1>
 <h2 id="ecran">Ecran</h2>
 <p>L'écran de jeu est un ensemble de pixels. Chaque pixel est localisé sur l'écran par 2 coordonnées: x et y. </p>
-<p><img alt="Repère" src="img/pyxel_1_3.png" width="350" /></p>
+<p><img alt="Repère" src="../img/pyxel_1_0.png" width="350" /></p>
 <p>L'écran a pour résolution 128 pixels horizontalement et 128 pixels verticalement</p>
 <h2 id="structure-du-programme">Structure du programme</h2>
 <p>Le programme est structuré en trois parties</p>
