--- a/11_Ondes/index.html
+++ b/11_Ondes/index.html
@@ -725,6 +725,8 @@
 <li><span class="arithmatex">\(I_0=10^{-12}\:W/m^2\)</span> seuil d'audibilité</li>
 <li>Relation Puissance, intensité et surface S de l'onde sonore: 
 <span class="arithmatex">\(<span class="arithmatex">\(I=\frac{P}{S}\)</span>\)</span></li>
+<li>L'atténuation <span class="arithmatex">\(A\)</span> entre 2 niveaux sonores <span class="arithmatex">\(L_1\)</span> et <span class="arithmatex">\(L_2\)</span> vaut <span class="arithmatex">\(<span class="arithmatex">\(A=L_1 - L_2\)</span>\)</span></li>
+<li>L'atténuation peut être d'origine géométrique ou due à l'absorption du milieu</li>
 </ul>
 </div>
 <h3 id="exercice-1">Exercice 1</h3>
@@ -743,7 +745,8 @@ b. <span class="arithmatex">\(I=I_0.10^{L/10}=10^{-12}.10^{69/10}=7,9/10^{-6}  \
 </ol>
 </details>
 <h3 id="exercice-du-bac">Exercice du BAC</h3>
-<p><a href="https://labolycee.org/nuisances-sonores-dun-aeroport">Sujet de Bac Polynésie 2021</a></p>
+<p><a href="https://labolycee.org/polynesie-2022-jour-2">Polynésie 2022 J2 Exercice C</a>
+<a href="https://labolycee.org/nuisances-sonores-dun-aeroport">Sujet de Bac Polynésie 2021</a></p>
 <h2 id="ondes-lumineuses">Ondes Lumineuses</h2>
 <div class="admonition failure">
 <p class="admonition-title">Formulaire</p>
