maj depuis Mac Studio 24 06

--- a/nsi/calculs/index.html
+++ b/nsi/calculs/index.html
@@ -825,7 +825,7 @@
 <span class="n">c</span> <span class="o">=</span> <span class="n">c</span> <span class="o">+</span> <span class="mi">1</span>
 </code></pre></div>
 <code>c</code> contient maintenant la valeur <strong>4</strong></li>
-<li><code>c = c + 1</code> doit se lire de droite à gauche. Prenons la valeur de c présente dans la mémoire (c vaut 3) ajoutons <code>c + 1</code> cela fait 4. Affectons cette valeur 4 à la variable c. 
+<li><strong>Bien comprendre que:</strong> <code>c = c + 1</code> doit se lire de droite à gauche. Prenons la valeur de c présente dans la mémoire (c vaut 3) ajoutons <code>c + 1</code> cela fait 4. Affectons cette valeur 4 à la variable c. 
 Maintenant <code>c</code> contient 4.</li>
 </ul>
 </div>
