--- a/nsi/checkpoint1/index.html
+++ b/nsi/checkpoint1/index.html
@@ -710,15 +710,14 @@
 <p>Le moment est venu de faire le bilan de ce que tu as appris.</p>
 <div class="admonition note">
 <p class="admonition-title">Questions</p>
-</div>
-<details class="warning">
-<summary>Correction - Activité 1</summary>
 <ol>
-<li>double est une variable de type flottant: python renvoie <code>float</code> après exécution de <code>type(double)</code> dans la console.</li>
-<li>Lorsque l'on addition un float avec un int le résultat doit pouvoir contenir la partir décimal du float. C'est pourquoi somme est du type float.</li>
-<li>Python affiche que 6 + 3.14 = 6.140000000000001, il commet une erreur de 0.000000000000001. C'est peu mais c'est une erreur qui risque de se cumuler avec d'autres par la suite. Seul les nombres entiers sont exacts en python.</li>
+<li>Tu vas créer des variables qui se nomment: <code>math</code>, <code>histgeo</code> et <code>francais</code> dans lesquelles tu affecteras une les notes 12, 14 et 15.</li>
+<li>Tu crées une variable moyenne et tu fais calculer à Python la moyenne des notes.</li>
+<li>Créé aussi les variables <code>nom</code>, <code>classe</code> et leurs affecter la valeur "MARTIN" et "Première G3"</li>
+<li>En utilisant une f-string et les variables précédentes affiche le message: <code>L'élève MARTIN de la classe Première G3 a obtenu une moyenne de 13,7</code></li>
+<li><strong>Sur une feuille A4</strong> Rédige la synthèse de ce que tu dois retenir sur les variables et types.</li>
 </ol>
-</details>
+</div>
 
               
             </article>
