--- a/nsi/checkpoint1/index.html
+++ b/nsi/checkpoint1/index.html
@@ -711,7 +711,7 @@
 <div class="admonition note">
 <p class="admonition-title">Questions</p>
 <ol>
-<li>Tu vas créer des variables qui se nomment: <code>math</code>, <code>histgeo</code> et <code>francais</code> dans lesquelles tu affecteras une les notes 12, 14 et 15.</li>
+<li>Tu vas créer des variables qui se nomment: <code>math</code>, <code>histgeo</code> et <code>francais</code> dans lesquelles tu affecteras  les notes 12, 14 et 15.</li>
 <li>Tu crées une variable moyenne et tu fais calculer à Python la moyenne des notes.</li>
 <li>Créé aussi les variables <code>nom</code>, <code>classe</code> et leurs affecter la valeur "MARTIN" et "Première G3"</li>
 <li>En utilisant une f-string et les variables précédentes affiche le message: <code>L'élève MARTIN de la classe Première G3 a obtenu une moyenne de 13,7</code></li>
