Alfred script Depuis MacStudio

--- a/nsi/variables/index.html
+++ b/nsi/variables/index.html
@@ -1216,8 +1216,8 @@
 <details class="warning">
 <summary>Correction - Activité 1</summary>
 <ol>
-<li>double est une variable de type flottant: python renvoie <code>float</code> après exécution de <code>type(double)</code> dans la console.</li>
-<li>Lorsque l'on addition un float avec un int le résultat doit pouvoir contenir la partir décimal du float. C'est pourquoi somme est du type float.</li>
+<li>double est une variable de type entier: python renvoie <code>int</code> après exécution de <code>type(double)</code> dans la console.</li>
+<li>Lorsque l'on additionne un float avec un int le résultat doit pouvoir contenir la partie décimale du float. C'est pourquoi, la variable somme est du type float.</li>
 <li>Python affiche que 6 + 3.14 = 6.140000000000001, il commet une erreur de 0.000000000000001. C'est peu mais c'est une erreur qui risque de se cumuler avec d'autres par la suite. Seul les nombres entiers sont exacts en python.</li>
 </ol>
 </details>
