Alfred script Depuis MacStudio

--- a/index.html
+++ b/index.html
@@ -1152,9 +1152,9 @@
 
 
 <h1 id="specialite-nsi">Spécialité NSI</h1>
-<p><strong>MAJ du 3 Septembre</strong></p>
+<p><strong>MAJ du 14 Septembre</strong></p>
 <ul>
-<li>La saison 1 des activités est prête</li>
+<li>Correction de quelques erreurs dans la saison 1</li>
 </ul>
 <h1 id="la-specialite-physique-chimie-a-dumezil">La Spécialité Physique Chimie à Dumézil</h1>
 <p><strong>Mise à jour du 2 Septembre</strong></p>
