Alfred script Depuis MacStudio

--- a/nsi/calculs/index.html
+++ b/nsi/calculs/index.html
@@ -1271,7 +1271,7 @@
 <p class="admonition-title">Travail</p>
 <ol>
 <li>Vérifie dans la console que le modulo d'un entier pair vaut toujours 0 et que le modulo d'un entier impair vaut 1. C'est une technique que tu vas souvent utiliser pour déterminer si un entier est pair ou non.</li>
-<li>Un sac content 257 popcorns, calcule avec la console Python comment répartir les popcorns entre 3 personnes. Les popcorns restant seront pour le chien. Combien Médor reçoit-il de popcorn ?</li>
+<li>Un sac contient 257 popcorns, calcule avec la console Python comment répartir les popcorns équitablement entre 3 personnes. Les popcorns restant seront pour le chien. Combien le chien reçoit-il de popcorn ?</li>
 </ol>
 </div>
 <h2 id="lincrementation-tres-important-par-la-suite">L'INCRÉMENTATION TRès Important par la suite</h2>
