re maj 3 dec 2023

--- a/index.html
+++ b/index.html
@@ -1218,10 +1218,9 @@
 <li>Pour <strong>Apprendre</strong> en se questionnant: <a href="https://quizzeleve.streamlit.app/">Q&amp;R</a></li>
 <li>Pour les élèves de terminale voici <a href="https://drive.google.com/drive/folders/1WFD6kX98wNW6Xm_vN5hE8vZB2_3wl2YN?usp=share_link">le lien vers le dossier partagé</a></li>
 </ul>
-<p><strong>MAJ du 25 aout 2023</strong></p>
+<p><strong>MAJ du 3 Décembre 2023</strong></p>
 <ul>
-<li>Consolidation des pages NSI</li>
-<li>Ajout d'une page avec des liens</li>
+<li>Nouveaux Défis à réaliser avec Pyxel</li>
 </ul>
 
 
