--- a/pyxel_1/index.html
+++ b/pyxel_1/index.html
@@ -1494,7 +1494,8 @@
 <h3 id="defis">Défis</h3>
 <p>En utilisant une boucle, réaliser les dessins suivants:</p>
 <p><img alt="Ecran" src="../img/pyxel_1_1.png" width="350" />
-<img alt="Ecran" src="../img/pyxel_1_3.png" width="350" /></p>
+<img alt="Ecran" src="../img/pyxel_1_3.png" width="350" />
+<img alt="Ecran" src="../img/rectangles.png" width="350" /></p>
 
 
 
