--- a/pyxel_2/index.html
+++ b/pyxel_2/index.html
@@ -1324,12 +1324,13 @@
 <span class="n">position_x</span> <span class="o">=</span> <span class="mi">1</span>
 <span class="n">pyxel</span><span class="o">.</span><span class="n">run</span><span class="p">(</span><span class="n">update</span><span class="p">,</span> <span class="n">draw</span><span class="p">)</span>
 </code></pre></div>
-<pre><code>1. Que représente la variable: `position_x` ?
-2. Que permet la ligne `position_x = position_x + 1` ?
-3. Pourquoi faire un test conditionnel dans la fonction `update()` ?
-4. Que permet l'instruction `global` ? Aurait-on pu faire autrement ?
-5. Modifie le programme afin que le rectangle rebondisse sur le bord droit et gauche de l'écran.
-</code></pre>
+<ol>
+<li>Que représente la variable: <code>position_x</code> ?</li>
+<li>Que permet la ligne <code>position_x = position_x + 1</code> ?</li>
+<li>Pourquoi faire un test conditionnel dans la fonction <code>update()</code> ?</li>
+<li>Que permet l'instruction <code>global</code> ? Aurait-on pu faire autrement ?</li>
+<li>Modifie le programme afin que le rectangle rebondisse sur le bord droit et gauche de l'écran.</li>
+</ol>
 <p><img alt="Animation" src="../img/pyxel_2_1.gif" width="350" /></p>
 <h2 id="defis">Défis</h2>
 <p>Réalise les animations suivantes: </p>
@@ -1343,6 +1344,7 @@
 </details>
 <p><img alt="Animation" src="../img/pyxel_1_4.gif" width="350" /></p>
 <p><img alt="Animation" src="../img/pyxel_1_2.gif" width="350" /></p>
+<p><img alt="Animation" src="../img/rectangles_anim.gif" width="350" /></p>
 <p><img alt="Animation" src="../img/damier.gif" width="350" /></p>
 <details class="warning">
 <summary>Correction défi 1</summary>
